remove share from pubs

--- a/_config.yml
+++ b/_config.yml
@@ -227,7 +227,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      share: true
+      share: false
       comments: true
   # _software
   - scope:
