--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Scott Brainard"
   avatar           : "profile.png"
-  bio              : "Under construction"
+  bio              : "Tree crops"
   location         : "Madison, WI"
   employer         : #"University of Wisconsin-Madison"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
