--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Scott Brainard"
 title_separator          : "-"
 name                     : &name "Scott Brainard"
 description              : &description ""
-url                      : https://shbrainard.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://shbrainard.org # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "shbrainard/shbrainard.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
